--- a/ubuntu-docker-version/Dockerfile
+++ b/ubuntu-docker-version/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:18.04
+MAINTAINER "Jeremy Mathevet <jeremy@mathevet.net>"
 
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
