Update to ubuntu 19.04

--- a/ubuntu-docker-version/Dockerfile
+++ b/ubuntu-docker-version/Dockerfile
@@ -1,5 +1,5 @@
-FROM ubuntu:18.04
-MAINTAINER "Jeremy Mathevet <jeremy@mathevet.net>"
+FROM ubuntu:19.04
+LABEL maintainer="Jeremy Mathevet <jeremy@mathevet.net>"
 
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
